--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -2,3 +2,16 @@
 .fieldQuestionMark {
   color: #eaeaec;
 }
+
+
+ul.nav .user-menu {
+  padding-right: 15px;
+}
+
+a.sidebar-button {
+  color: #fff;
+  float: left;
+  background-color: transparent;
+  background-image: none;
+  padding: 15px 15px;
+}
