--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -2,3 +2,34 @@
 .fieldQuestionMark {
   color: #eaeaec;
 }
+
+
+/* Handling image zoom on hover */	
+	.kuinkZoom {      
+	-webkit-transition: all 0.35s ease-in-out;    
+	-moz-transition: all 0.35s ease-in-out;    
+	transition: all 0.35s ease-in-out;     
+	cursor: -webkit-zoom-in;      
+	cursor: -moz-zoom-in;      
+	cursor: zoom-in;  
+	}     
+	
+	.kuinkZoom:hover,  
+	.kuinkZoom:active,   
+	.kuinkZoom:focus {
+	/**adjust scale to desired size, 
+	add browser prefixes**/
+	-ms-transform: scale(3);    
+	-moz-transform: scale(3);  
+	-webkit-transform: scale(3);  
+	-o-transform: scale(3);  
+	transform: scale(3);    
+	position:relative;      
+	z-index:100;  
+	}
+
+	
+	
+	
+	
+	
