Feature: template | changes in navigation bar to support user photo dropdown

--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -62,5 +62,5 @@ give gallery's parent container a cursor: pointer.**/
 }
 
 .navbar-right {
-	padding-right: 15px;
+	margin-right: 0px !important;
 }
