--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -52,15 +52,18 @@ give gallery's parent container a cursor: pointer.**/
 .navbar {
 	height: 61px;
 }
-
 .navbar * {
 	height: 100%;
 }
-
 .navbar .dropdown-menu > li {
     height: auto;
 }
-
 .navbar-right {
 	margin-right: 0px !important;
+}
+.navbar-fixed-top {
+	box-shadow: 0 0 15px 0 rgba(0,0,0,.3) !important;
+}
+.content-wrapper {
+	padding-top: 61px;
 }
