--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -67,3 +67,6 @@ give gallery's parent container a cursor: pointer.**/
 .content-wrapper {
 	padding-top: 61px;
 }
+.bg-primary {
+	background-color: #0072AA !important;
+}
