--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -48,6 +48,7 @@ give gallery's parent container a cursor: pointer.**/
 	filter: grayscale(100%);
 }
 
+/* Below CSS: TO REVIEW, after new versions of theme libraries */
 /* Global menus and navigation */
 .navbar {
 	height: 61px;
@@ -67,6 +68,11 @@ give gallery's parent container a cursor: pointer.**/
 .content-wrapper {
 	padding-top: 61px;
 }
-.bg-primary {
-	background-color: #0072AA !important;
+
+/* Some button styles */
+.btn-group .btn:not(:last-child) {
+    margin-right: 5px; /* Adiciona uma margem à direita para todos os botões, exceto o último */
+}
+.btn {
+	border-radius: 13px !important;
 }
