Feature:  template | improve navbar removing company menu, changing it to user panel; beta

--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -100,3 +100,7 @@ body {
 	padding: 8px !important;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 8px;
 }
+
+.dropdown-menu {
+	box-shadow: 0 6px 12px rgba(0,0,0,.175);
+}
