--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -52,6 +52,7 @@ give gallery's parent container a cursor: pointer.**/
 /* Global menus and navigation */
 .navbar {
 	height: 61px;
+	margin-left: 0px !important;
 }
 .navbar * {
 	height: 100%;
@@ -66,7 +67,7 @@ give gallery's parent container a cursor: pointer.**/
 	box-shadow: 0 0 15px 0 rgba(0,0,0,.3) !important;
 }
 .content-wrapper {
-	padding-top: 61px;
+	padding-top: 61px !important;
 }
 .navbar-brand {
 	padding-bottom: 4.5px;
@@ -84,8 +85,26 @@ give gallery's parent container a cursor: pointer.**/
 }
 
 /* Sidebar */
-.main-sidebar {
+@media screen and (min-width: 768px) {
+	.main-sidebar {
+		box-shadow: 0 14px 28px rgba(0,0,0,.35),0 10px 10px rgba(0,0,0,.32) !important;
+	}
+}
+
+.sidebar-open .main-sidebar {
 	box-shadow: 0 14px 28px rgba(0,0,0,.35),0 10px 10px rgba(0,0,0,.32) !important;
+}
+
+.main-sidebar {
+	padding-top: 50px !important;
+	/*position: fixed;*/
+}
+.sidebar {
+	height: 100vh !important;
+	/*overflow-y: scroll;*/
+}
+.sidebar-toggle {
+	padding: 19px !important;
 }
 
 /* Some button styles */
@@ -102,17 +121,22 @@ body {
 	background-color: #f9fafc !important;
 }
 
-#refresh {
+#float-panel {
 	position:fixed;
-	top: 110px;
+	bottom: 20px;
 	right: 20px;
 	z-index: 1000;
+	width: min-content;
+}
+
+.float-button {
 	border-radius: 50% !important;
 	width: 42px;
 	height: 42px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 8px;
 	font-size: 18px;
 	padding: 8px !important;
-	box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 8px;
+	margin: 5px 0px;
 }
 
 .dropdown-menu {
