--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -131,11 +131,11 @@ body {
 
 .float-button {
 	border-radius: 50% !important;
-	width: 42px;
-	height: 42px;
+	width: 36px;
+	height: 36px;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 8px;
-	font-size: 18px;
-	padding: 8px !important;
+	font-size: 16px;
+	padding: 7px !important;
 	margin: 5px 0px;
 }
 
@@ -151,4 +151,8 @@ body {
 .dropdown-item:hover {
 	background-color: #e1e3e9 !important;
 	color: #333 !important;
+}
+
+#backToTop {
+	display: none;
 }
