--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -111,7 +111,8 @@ give gallery's parent container a cursor: pointer.**/
 }
 
 .sidebar-toggle {
-	padding: 19px !important;
+	padding: 16px !important;
+	width: 50px;
 }
 
 /* Some button styles */
@@ -122,7 +123,7 @@ give gallery's parent container a cursor: pointer.**/
 	border-radius: 13px !important;
 }
 body {
-	font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;
+	/*font-size: 14px;*/
 }
 .wrapper {
 	background-color: #f9fafc !important;
@@ -142,7 +143,7 @@ body {
 	height: 36px;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 8px;
 	font-size: 16px;
-	padding: 7px !important;
+	padding: 6px !important;
 	margin: 5px 0px;
 }
 
@@ -162,4 +163,15 @@ body {
 
 #backToTop {
 	display: none;
+}
+
+.sidebar-toggle::before {
+	font-size: 20px;
+}
+.main-header .sidebar-toggle::before {
+	content: "\f0c9";
+}
+  
+body:not(.sidebar-collapse) .sidebar-toggle::before {
+	content: "\f00d";
 }
