--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -48,6 +48,19 @@ give gallery's parent container a cursor: pointer.**/
 	filter: grayscale(100%);
 }
 
+/* Kuink Fonts */
+
+.screen-title {
+	text-align: center;
+	font-size: 24px;
+	font-weight: bold;
+	font-family: 'Trebuchet MS', 'Source Sans Pro', Arial, Helvetica, sans-serif;
+	letter-spacing: 1px;
+	padding-top: 20px;
+	margin-bottom: 20px;
+	border-bottom: 1px solid #eee;
+}
+
 /* Below CSS: TO REVIEW, after new versions of theme libraries */
 /* Global menus and navigation */
 .navbar {
@@ -78,7 +91,7 @@ give gallery's parent container a cursor: pointer.**/
 .navbar-header {
 	float: left;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 405px) {
 	.navbar-brand {
 		display: initial;
 	}
@@ -167,11 +180,15 @@ body {
 
 .sidebar-toggle::before {
 	font-size: 20px;
-}
-.main-header .sidebar-toggle::before {
 	content: "\f0c9";
 }
-  
-body:not(.sidebar-collapse) .sidebar-toggle::before {
-	content: "\f00d";
+@media screen and (min-width: 768px) {
+	body:not(.sidebar-collapse) .sidebar-toggle::before {
+		content: "\f00d";
+	}
+}
+@media screen and (max-width: 768px) {
+	body.sidebar-open .sidebar-toggle::before {
+		content: "\f00d";
+	}
 }
