--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -142,6 +142,20 @@ body {
 	background-color: #f9fafc !important;
 }
 
+@media (min-width: 768px) {
+	.background-img {
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		background-image: url('../../img/bg1_light.png');
+		background-size: cover;
+	}
+
+	.box {
+		background-color:rgba(255, 255, 255, 0.8);
+		border-radius: 8px;
+	}
+}
+
 #float-panel {
 	position:fixed;
 	bottom: 20px;
