--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -120,13 +120,79 @@ give gallery's parent container a cursor: pointer.**/
 }
 
 .y-scroll {
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .sidebar-toggle {
 	padding: 16px !important;
 	width: 50px;
 }
+
+/* Scrollbar */
+
+body {
+	height: auto !important;
+    min-height: 100% !important;
+	overflow-y: hidden;
+}
+
+
+
+/*
+
+
+
+
+
+#page.drawers {
+    margin-top: 60px;
+    scrollbar-width: thin;
+    scrollbar-color: #6a737b #f8f9fa
+}
+
+#page.drawers::-webkit-scrollbar {
+    width: 12px
+}
+
+#page.drawers::-webkit-scrollbar-track {
+    background: #f8f9fa
+}
+
+#page.drawers::-webkit-scrollbar-thumb {
+    background-color: #6a737b;
+    border-radius: 20px;
+    border: 3px solid #f8f9fa
+}
+
+#page.drawers::-webkit-scrollbar-thumb:hover {
+    background-color: #495057
+}
+
+#page.drawers .main-inner {
+    max-width: 100%;
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 0;
+    background-color: #fff;
+    padding: 1.5rem .5rem;
+    margin-top: .5rem;
+    margin-bottom: 3rem;
+    flex: 1 0 auto
+}
+
+#page.drawers .activity-header {
+    margin-left: 15px;
+    margin-right: 15px
+}
+
+
+
+*/
+
+
+
+
+
 
 /* Some button styles */
 .btn-group .btn:not(:last-child) {
