--- a/assets/css/kuink.css
+++ b/assets/css/kuink.css
@@ -109,18 +109,13 @@ give gallery's parent container a cursor: pointer.**/
 }
 
 .main-sidebar {
-	padding-top: 50px !important;
+	padding-top: 61px !important;
 	top: 0px;
 	left: 0px;
 	position: fixed;
 }
 .sidebar {
-	height: 100vh !important;
-	/*overflow-y: scroll;*/
-}
-
-.y-scroll {
-	overflow-y: auto;
+	height: calc(100vh - 61px) !important;
 }
 
 .sidebar-toggle {
@@ -129,69 +124,32 @@ give gallery's parent container a cursor: pointer.**/
 }
 
 /* Scrollbar */
-
 body {
 	height: auto !important;
     min-height: 100% !important;
 	overflow-y: hidden;
 }
 
-
-
-/*
-
-
-
-
-
-#page.drawers {
-    margin-top: 60px;
-    scrollbar-width: thin;
+.y-scrollable {
+	height: calc(100vh - 61px);
+	overflow-y: auto;
+	scrollbar-width: thin;
     scrollbar-color: #6a737b #f8f9fa
 }
-
-#page.drawers::-webkit-scrollbar {
-    width: 12px
+.y-scrollable::-webkit-scrollbar {
+    width: 10px
 }
-
-#page.drawers::-webkit-scrollbar-track {
-    background: #f8f9fa
-}
-
-#page.drawers::-webkit-scrollbar-thumb {
+/*.y-scrollable::-webkit-scrollbar-track {
+	background: #f8f9fa
+}*/
+.y-scrollable::-webkit-scrollbar-thumb {
     background-color: #6a737b;
     border-radius: 20px;
-    border: 3px solid #f8f9fa
+    border: 1px solid rgba(248, 249, 250, 0.8)
 }
-
-#page.drawers::-webkit-scrollbar-thumb:hover {
+.y-scrollable::-webkit-scrollbar-thumb:hover {
     background-color: #495057
 }
-
-#page.drawers .main-inner {
-    max-width: 100%;
-    width: 100%;
-    margin: 0 auto;
-    border-radius: 0;
-    background-color: #fff;
-    padding: 1.5rem .5rem;
-    margin-top: .5rem;
-    margin-bottom: 3rem;
-    flex: 1 0 auto
-}
-
-#page.drawers .activity-header {
-    margin-left: 15px;
-    margin-right: 15px
-}
-
-
-
-*/
-
-
-
-
 
 
 /* Some button styles */
